@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-11-23T08:07:39Z",
+  "timestamp" : "2022-11-23T16:06:49Z",
   "count_outdated" : 1930,
   "uniques_outdated" : 623,
-  "count" : 1965,
-  "uniques" : 640,
+  "count" : 1967,
+  "uniques" : 641,
   "clones" : [
     {
       "timestamp": "2022-11-13T00:00:00Z",
@@ -77,10 +77,10 @@
     },
     {
       "timestamp": "2022-11-23T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
+      "count": 3,
+      "count_minmax": [ 1, 3 ],
+      "uniques": 2,
+      "uniques_minmax": [ 1, 2 ]
     }
   ]
 }
