@@ -1,6 +1,6 @@
 {
-  "count": 35,
-  "uniques": 6,
+  "count": 37,
+  "uniques": 7,
   "clones": [
     {
       "timestamp": "2022-11-13T00:00:00Z",
@@ -54,8 +54,8 @@
     },
     {
       "timestamp": "2022-11-23T00:00:00Z",
-      "count": 1,
-      "uniques": 1
+      "count": 3,
+      "uniques": 2
     }
   ]
 }
